KubernetesManifests/BasicDisplayDB.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basicdisplaydb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: basicdisplaydb
  template:
    metadata:
      labels:
        app: basicdisplaydb
    spec:
      containers:
        - name: server
          image: postgres:14.1
          ports:
            - containerPort: 25432
              name: tcp-postgres
---
apiVersion: v1
kind: Service
metadata:
  name: basicdisplaydb
spec:
  type: ClusterIP
  selector:
    app: basicdisplaydb
  ports:
    - name: tcp-postgres
      port: 25432
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: basicdisplaydb
spec:
  hosts:
    - basicdisplaydb
  http:
    - route:
        - destination:
            host: basicdisplaydb
