KubernetesManifests/NextClient.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextclientservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextclientservice
  template:
    metadata:
      labels:
        app: nextclientservice
    spec:
      containers:
      - name: server
        image: next_client_service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
          name: tcp-port
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nextclientservice
spec:
  type: ClusterIP
  selector:
    app: nextclientservice
  ports:
  - name: http
    port: 3000
    protocol: TCP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nextclientservice
spec:
  hosts:
  - nextclientservice
  http:
  - route:
    - destination:
        host: nextclientservice
