KubernetesManifests/UserSecurityDB.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usersecuritydb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usersecuritydb
  template:
    metadata:
      labels:
        app: usersecuritydb
    spec:
      containers:
        - name: server
          image: postgres:14.1
          ports:
            - containerPort: 15432
              name: tcp-postgres
---
apiVersion: v1
kind: Service
metadata:
  name: usersecuritydb
spec:
  type: ClusterIP
  selector:
    app: usersecuritydb
  ports:
    - name: tcp-postgres
      port: 15432
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: usersecuritydb
spec:
  hosts:
    - usersecuritydb
  http:
   - route:
     - destination:
         host: usersecuritydb
